assets/css/index.css
/* || CSS Variables */
:root {
    /* colors */
    --color-primary: #b1624e;
    --color-secondary: #3da4b2;
    --color-light: #fff;
    --color-dark: #000;

    /* fonts */
    --base-font: "Book Antiqua", Palatino, "EB Garamond", serif;

    --title-font: 'Alegreya Sans SC', sans-serif !important;
    --header-font: 'Roboto', sans-serif;
    --body-font: ;
    --footer-font: ;
}


/* || GENERAL STYLES */
/* Styles that apply across */
html,
body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    font-family: var(--base-font);
}

p {
    line-height: 1.5625;
    margin-bottom: 1em;
}

a {
    text-decoration: none;
    color: var(--color-secondary);
}


img {
    height: 300px;
}

header {
    font-family: var(--header-font);
    background-color: var(--color-primary);
    text-transform: uppercase;
    font-size: 14px;
    line-height: 1em;
}

footer {
    background-color: var(--color-primary);
}


/* || UTILITIES */
/* Classses that tamper with the default to effect some customization*/
.collapse {
    z-index: 3000000000!important;
}

.card {
    z-index: 3000000!important;
}

/* || SITEWIDE */
/* Styles used site wide*/

/*header styles*/
header .header-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

header .site-title {
    font-family: var(--base-font);
    text-transform: capitalize;
    font-size: 36px;
}

header .navlinks {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

}

header a {
    color: var(--color-light);
}

header a:hover {
    color: var(--color-secondary);
}



.green-line {
    width: 100%;
    height: 10px;
    background-color: var(--color-secondary);
}

/* header styles For mobile responsiveness */

.hamburger-menu {
    height: 35px;
    display: none;
    color: var(--color-light);
    padding-bottom: 5px;
    margin-bottom: 5px;
}

.collapse-btn:focus {
    box-shadow: none !important;
    outline: none !important;
    outline-style: none;
    transition: none;
    animation: none;
}

.collapse-btn:active {
    border: none;
}

/*footer styles*/

.footer-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 10px;
}

.follow-icons {
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 10px;
}

.follow-icons h4 {
    color: var(--color-light);
    font-family: Arial, sans-serif;
    font-size: 30px;
    font-family: var(--title-font);
}

.follow-icons .icons {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.follow-icons .icons i {
    height: 45px;
    font-size: 20px;
    width: 45px;
    background-color: gray;
    opacity: .6;
    border-radius: 50%;
    text-align: center;
    padding-top: 15px;
    margin-bottom: 4.5px;
}

.about-me {
    display: flex;
    padding: 10px;
    justify-content: center;
    color: var(--color-light);
    font-size: 30px;
    font-family: var(--title-font);
}

.about-pic,
.about-text {
    margin: 0 5px;
}

.about-me .about-text {
    display: flex;
    flex-direction: column;
}

.about-text h4 {
    color: var(--color-light);
    font-family: Arial, sans-serif;
    font-size: 30px;
    font-family: var(--title-font);
}

.about-text p {
    color: var(--color-light);
    font-family: 'Crimson Text', serif;
    font-size: 20px;
}

.button {
    text-transform: uppercase;
    font-family: var(--header-font);
    border: 2px solid var(--color-light);
    padding: 7px 20px;
    font-size: 16px;
    margin-right: 10px;
    margin-bottom: 10px;
    display: inline-block;
    color: var(--color-light);
    max-width: max-content;
    transition: all .5s ease-in-out;
}

.button:hover {
    background-color: var(--color-light);
    color: var(--color-dark);
}

.button-plain-bg {
    color: var(--color-secondary)!important;
    border-color: var(--color-secondary);
    border-radius: 0;
}

.button-plain-bg:hover {
    color: var(--color-light)!important;
    background-color: var(--color-secondary);
}



.pages {
    display: flex;
    flex-direction: column;
    padding: 10px;
    padding-left: 0px;
    padding-right: 10px;
    margin-left: 0px;
    margin-right: 5px;
    font-family: var(--header-font)
}

.pages a {
    color: var(--color-light);
}



.copyright {
    color: #252525;
    font-family: Arial, sans-serif;
    font-size: 14px;
    text-align: center;
    font-family: var(--title-font);
}



/* || Specific page by page, context by context styling... */

/* Article Page */

article {
    margin: 0 auto
}

article .heading>h1 {
    width: 100%;
    font-weight: 300;
    line-height: 1.25;
    margin-bottom: 10px;
}

article .date {
    color: var(--color-secondary);
    font-size: 19px;
    border-top: 1px solid #b9cdeb;
    border-bottom: 1px solid #b9cdeb;
}


/* Media Queries */

@media (max-width: 330px) {
    img {
        height: 200px;
    }
}


@media (max-width: 603px) {

    header #navlinks {
        display: none;
    }

    .hamburger-menu {
        display: block;
        height: 20px;
        width: 25px;
    }

    .footer-container {
        flex-direction: column;
        text-align: center;
    }

    .icons {
        flex-direction: column;
        padding-bottom: 0px;
    }

    .icon-list {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    .icon-list li {
        padding: 5px;
        padding-bottom: 0;

    }

    .about-me {
        flex-direction: column;
        align-items: center;
    }

    .about-pic {
        margin-bottom: 6px;
        margin-top: 0px
    }

    .about-text {
        display: block !important;
    }

    a.contact-me-btn {
        margin: 0;
        margin-bottom: 0;
        max-width: none;
        margin: 0 auto;
    }

    .page-list {
        display: flex;
        justify-content: center;
    }

    .page-list li {
        padding: 5px;
    }




}

@media (max-width: 769px) {
    img {
        height: 200px;
    }


}

@media (min-width: 770px) {
    article {
        width: 60%;
        margin: 0 auto
    }
}

